Push to repair gitignore

--- a/BE/.gitignore
+++ b/BE/.gitignore
@@ -23,6 +23,7 @@ org.sonarlint.eclipse.core.prefs
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 *.class
+.class
 
 # Log file
 *.log
