--- a/BE/.gitignore
+++ b/BE/.gitignore
@@ -7,6 +7,7 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+org.eclipse.core.resources.prefs
 org.eclipse.jdt.core.prefs
 org.eclipse.m2e.core.prefs
 org.eclipse.jdt.apt.core.prefs
