--- a/FE/package.json
+++ b/FE/package.json
@@ -40,14 +40,12 @@
     "acorn": "^8.6.0",
     "angular-feather": "^6.1.0",
     "angular-gauge": "^4.0.0",
-    "apexcharts": "^3.32.0",
     "bootstrap": "^5.1.3",
     "browser-sync": "^0.9.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.20.0",
     "echarts": "^5.3.0",
     "moment": "^2.29.1",
-    "ng-apexcharts": "^1.6.0",
     "ng-click-outside": "^9.0.0",
     "ng-image-fullscreen-view": "^2.0.0",
     "ng-pick-datetime": "^7.0.0",
@@ -65,7 +63,9 @@
     "subsink": "^1.0.2",
     "sweetalert2": "^11.3.0",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "apexcharts": "^3.35.2",
+    "ng-apexcharts": "^1.7.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.2.5",
