--- a/BE/pom.xml
+++ b/BE/pom.xml
@@ -62,6 +62,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>ServiceCall</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
