--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Build and Test backend
         run: |
           cd BE
-          mvn clean install  
+          mvn clean install -DskipTests
